# ricklyman.github.io

./: DOM.html  LCLFS.html  OPFS.html  README.md  empty.html  fileReadWrite.html  incubation.html  index.css  index.html  lcl.html  nameValue.html  pascal.html  popup.html  test2GI.html  testCORS.html  testGI.html  testOPFS.html  tstScrape.html  twindex4.html  xml.html
Breakout/: AddWebSockets-asyncio.html  BreakoutServer.html  GameRunning.html  InstallError22.html  RuntimeError11.html  ScreenshotBreakoutGame.html  ScreenshotBreakoutServer.html  ScreenshotClientA.html  ScreenshotServer.html  Touch.html  TouchClientScreenshot.html  aiohttpError.html  aiohttpFirstRun.html  aiohttpInstall.html  aiohttpRunB.html  asyncio 7.txt  asyncio.html  asyncio.odt  asyncioBaseline.odt  breakout install.txt  breakout.py  client.html  client.py  client0screenshot.html  client0source.html  client0source0.html  clientA.html  clientAsource.html  index.html  new 3.txt  notes.odt  pixi 6.txt  pixi.toml  pyproject.toml  readme 5.txt  script.py  server.py  serverA.html  serverA.py  serverB.html  (+4 more)
Duck/: index.html  script.js  style.css
JSXAPPS/: launcher.html  launcher_ide.html
MirageOS/: index.html
Pascal/: index.html
generalinterface-master/: GI_Builder.html  debug_opfs.html  shell.html  test-overlay.html  test_gi_fs.html  vfs_manager.html
gi/: shell.html
minimal/: StyleSheetColors.css  StyleSheetLayout.css  giArea.js  index.html  jqueryArea.js  jsArea.js  jsdeprecatedArea.js  jslibArea.js  styleArea.css  useJavaSaver.js  versionArea.js
xml/: data.xml
xml/01/: data.xml  style.xsl
(+43 files in other folders)
