[project]
authors = [{name = "ricklyman", email = "lyman.rick@gmail.com"}]
dependencies = []
name = "breakout_2"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
breakout_2 = { path = ".", editable = true }

[tool.pixi.tasks]
